--- a/server/export_presets.cfg
+++ b/server/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="builds/server.dmg"
+export_path="builds/server.app"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -16,7 +16,7 @@ encrypt_directory=false
 
 [preset.0.options]
 
-export/distribution_type=1
+export/distribution_type=0
 binary_format/architecture="universal"
 custom_template/debug=""
 custom_template/release=""
